--- a/css/styles.css
+++ b/css/styles.css
@@ -18,6 +18,12 @@ body{
 .navbar-brand {
     padding:0;
 }
+.header-btn{
+    background-color:#2275c8;
+    padding:10px 18px;
+    border-radius: 4px ;
+    border:none;
+}
 nav li a{
     font-size:18px;
 }
@@ -32,12 +38,18 @@ nav li a{
 .nav-top{
     padding-top:15px;
 }
-.jumbotron {
+.banner{
     background-image: url("http://pushbuttoninfluence.com/show/wp-content/uploads/2016/02/banner-2.jpg");
-    min-height: 750px;
     background-size: cover;
+    min-height: 530px;
+}
+.jumbotron {
+    padding-top: 120px;
+    padding-bottom: 30px;
+    margin-bottom: 30px;
+    color: white;
+    background-color: inherit;
     text-align: center;
-    margin-bottom:0;
 }
 .container-fluid{
     padding:0;
@@ -46,9 +58,9 @@ nav li a{
 .jumbotron p {
     color:#ffffff;
 }
-.jumbotron h1{
+.jumbotron h2{
     color:#ffffff;
-    padding-top: 160px;
+    font-size:50px;
 }
 .btn{
     line-height: 20px;
@@ -57,6 +69,9 @@ nav li a{
 }
 .container .jumbotron, .container-fluid .jumbotron{
     border-radius: 0;
+}
+.media-sources a{
+     text-decoration: none;
 }
 .podcast {
     background-color: #54c8e0;
@@ -72,7 +87,14 @@ nav li a{
     margin-left:20px;
     color:white;
 }
+.btn:hover, .btn:focus, .btn.focus {
+    text-decoration: none;
+}
 .pod-1 {
+    color:white;
+}
+.episodes  button:hover{
+    background-color:#54c8e0;
     color:white;
 }
 .img-1{
@@ -113,6 +135,20 @@ nav li a{
 }
  .page-header h1 {
     color:white;
+}
+.page-article a{
+    text-decoration: none;
+    color:#54c8e0;
+    font-size:20px;
+}
+.page-article h3{
+    font-size:20px;
+    line-height:25px;
+    color:#54c8e0;
+}
+.page-article p{
+    color:white;
+    font-size:14px;
 }
 .episode-influence  h3{
     font-size:20px;
@@ -271,4 +307,11 @@ nav li a{
 .bar-footer span
 {
     font-size:16px;
+}
+.main-footer button:hover{
+    background-color:#54c8e0;
+    color:white;
+}
+.banner button:hover{
+    background-color: #54c8e0;
 }
